config panel dark mode fix

--- a/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
+++ b/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
@@ -204,4 +204,9 @@ $vis-editor-sidebar-min-width: 350px;
   .panel_section, .cp__rightHeader {
     border-bottom: 1px solid $border-color-on-dark;
   }
+
+  .panelItem_box {
+    color: #8D98A3;
+    background-color: #293847;
+  }
 }
